[package]
name = "backend"
version = "0.1.0"
authors = ["hyun-wook ha <ha0146@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
csv = "1"
lazy_static = "1"
r2d2_redis = "0.12.0"
rand = "0.7"
min-max-heap = "1.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
http = "0.2"
packed_simd = "0.3.3"