[package]
name = "server"
version = "0.1.0"
authors = ["hyun-wook ha <ha0146@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
serde_json = "1.0"
serde = "1.0"
actix-cors = "0.2"
actix-web = "2"
actix-rt = "1"
tokio-uds = "0.2"
backend = { path= "../backend" }
qstring = "0.7"

[[bin]]
name = "server"
path = "main.rs"
