[package]
name = "server"
version = "0.1.0"
authors = ["hyun-wook ha <ha0146@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = "1.0"
actix-cors = "0.2"
actix-web = { version="2.0", features=["openssl"]}
openssl = "0.10"
actix-rt = "1"
tokio-uds = "0.2"
backend = { path= "../backend" }
r2d2_redis = "0.13.0"
log = "0.4.11"
env_logger = "0.7.1"


[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"

[[bin]]
name = "server"
path = "main.rs"

[dev-dependencies]
bencher = "0.1"